--- a/Shop.UI/Admin/Index.cshtml
+++ b/Shop.UI/Admin/Index.cshtml
@@ -15,5 +15,5 @@
 @section scripts{
 
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <script src="~/js/admin/main.js"></script>
+    <script src="/js/admin/main.js"></script>
 }
